--- a/bronk.cabal
+++ b/bronk.cabal
@@ -29,3 +29,4 @@ executable bronk
                      , lens-aeson
                      , text
                      , transformers
+                     , vty
