--- a/bronk.cabal
+++ b/bronk.cabal
@@ -4,7 +4,7 @@ version:             0.1.0.0
 -- description:
 homepage:            https://github.com/githubuser/bronk#readme
 license:             BSD3
-license-file:        LICENSE
+-- license-file:        LICENSE
 author:              Author name here
 maintainer:          example@example.com
 copyright:           2018 Author name here
