Totally gonna work soon

--- a/bronk.cabal
+++ b/bronk.cabal
@@ -30,3 +30,4 @@ executable bronk
                      , text
                      , transformers
                      , vty
+                     , vector
