--- a/bronk.cabal
+++ b/bronk.cabal
@@ -17,6 +17,10 @@ executable bronk
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
+  other-modules:
+                Board
+              , Sprint
+              , Shared
   ghc-options:
               -threaded
   build-depends:       base >= 4.7 && < 5
